[gd_scene load_steps=3 format=3 uid="uid://cw3iwnthti417"]

[ext_resource type="Script" path="res://UI/Settings/KeyMapping/KeyMapping.gd" id="1_juo1g"]
[ext_resource type="PackedScene" uid="uid://d3suky0axfqhi" path="res://UI/Settings/KeyMapping/InputButtonMap/input_button_map.tscn" id="2_uvndg"]

[node name="KeyMapping" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_juo1g")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -239.0
offset_top = -262.0
offset_right = 239.0
offset_bottom = 262.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="PanelContainer"]
layout_mode = 2
theme_type_variation = &"PanelBackground"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Controls"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="InputButtonList" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="InputButton" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/InputButtonList" instance=ExtResource("2_uvndg")]
layout_mode = 2

[node name="ResetButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Reset to default"

[node name="ButtonBack" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Back"
